[gd_scene load_steps=7 format=3 uid="uid://d284hxdan6uj0"]

[ext_resource type="Script" uid="uid://2w7f6riwnbgt" path="res://World/TestScene/Scripts/grass_defo.gd" id="1_1wvdv"]
[ext_resource type="Texture2D" uid="uid://c0ou162khl0qr" path="res://World/TestScene/Assets/GrassDeform.png" id="1_onp67"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1wvdv"]
radius = 3.0

[sub_resource type="Animation" id="Animation_0na0n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrassDeform:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1wvdv"]
resource_name = "Return"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GrassDeform:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31sla"]
_data = {
&"RESET": SubResource("Animation_0na0n"),
&"Return": SubResource("Animation_1wvdv")
}

[node name="GrassDefo" type="Area2D"]
script = ExtResource("1_1wvdv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1wvdv")

[node name="GrassDeform" type="Sprite2D" parent="."]
visible = false
texture_filter = 3
texture = ExtResource("1_onp67")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_31sla")
}
speed_scale = 4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
